@@ -2,6 +2,7 @@ readsb (3.8.4~dev) UNRELEASED; urgency=medium
 
   * In development
   * Support GNS HULC antenna.
+  * Interrupt driven serial device handling removed.
 
  -- Michael Wolf <michael@mictronics.de>  Sun, 03 May 2020 10:45:42 +0200
 
